# Juicy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Juicy.code-workspace  README.md  test_format.sh  test_lint.sh
.github/workflows/: cpp_linter.yml  test_format.yml  test_lint.yml
Source/: Meter.cpp  Meter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
TEMP/: PluginEditor.cpp  PluginProcessor.cpp
docs/: DEVELOPMENT.md
scripts/: format.sh
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
